--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
 								<th scope="col">Total <small>(with discount)</small></th>
 							</tr>
 						</thead>
-						<tbody id="cart_list">
+						<tbody>
+							<div class="cart_list"></div>
 							<tr>
 								<th scope="row">Cooking oil</th>
 								<td>$10.5</td>
@@ -267,7 +268,7 @@
 		</div>
 
 		<!-- Generate cart button -->
-		<div class="container d-flex justify-content-center fixed-top mt-3"><button class="btn-danger border-0 rounded-2 py-2 px-3" onclick="generateCart()">generateCart</button></div>
+		<div class="container d-flex justify-content-center fixed-top mt-3 w-25"><button class="btn-danger border-0 rounded-2 py-2 px-3" onclick="generateCart()">generateCart</button></div>
 	
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
