--- a/index.html
+++ b/index.html
@@ -227,15 +227,14 @@
 					<table class="table">
 						<thead>
 							<tr>
-								<th scope="col">Product</th>
-								<th scope="col">Price</th>
-								<th scope="col">Qty.</th>
-								<th scope="col">Total <small>(with discount)</small></th>
+							  <th scope="col">Product</th>
+							  <th scope="col">Price</th>
+							  <th scope="col">Qty.</th>
+							  <th scope="col">Total <small>(with discount)</small></th>
 							</tr>
 						</thead>
-						<tbody>
-							<div class="cart_list"></div>
-							<tr>
+						<tbody id="cart_list">
+							<!-- <tr>
 								<th scope="row">Cooking oil</th>
 								<td>$10.5</td>
 								<td>2</td>
@@ -252,9 +251,9 @@
 								<td>$15</td>
 								<td>3</td>
 								<td>$45</td>
-							</tr>
+							</tr> -->
 						</tbody>
-					</table>
+					  </table>
 					<div class="text-center fs-3">
 						Total: $<span id="total_price">100</span>
 					</div>
@@ -268,7 +267,7 @@
 		</div>
 
 		<!-- Generate cart button -->
-		<div class="container d-flex justify-content-center fixed-top mt-3 w-25"><button class="btn-danger border-0 rounded-2 py-2 px-3" onclick="generateCart()">generateCart</button></div>
+		<!-- <div class="container d-flex justify-content-center fixed-top mt-3 w-25"><button class="btn-danger border-0 rounded-2 py-2 px-3" onclick="generateCart()">generateCart</button></div> -->
 	
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
