--- a/checkout.html
+++ b/checkout.html
@@ -87,12 +87,12 @@
                 </div>
             </div>
 
-            <form class="form">
+            <form class="form needs-validation" novalidate>
                 <div class="row bord p-5 shadow m-5">
                     <div class="col-sm-6">
                         <div class="mt-3">
                             <label for="fName" class="form-label">First Name:</label>
-                            <input id="fName" class="form-control ml-3" type="text" placeholder="First Name"/>
+                            <input id="fName" class="form-control ml-3" type="text" placeholder="First Name" required/>
                             <div id="errorName" class="invalid-feedback">
                                 This field is required and must have, at least,
                                 3 characters
@@ -100,7 +100,7 @@
                         </div>
                         <div class="mt-3">
                             <label for="fEmail" class="form-label">Email:</label>
-                            <input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3"/>
+                            <input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" required/>
                             <div id="errorEmail" class="invalid-feedback">
                                 This field is required and must contain an '@'
                                 and have, at least, 3 characters
@@ -108,7 +108,7 @@
                         </div>
                         <div class="mt-3">
                             <label for="fAddress" class="form-label">Address:</label>
-                            <input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3"/>
+                            <input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" required/>
                             <div id="errorAddress" class="invalid-feedback">
                                 This field is required and must have, at least,
                                 3 characters
@@ -118,7 +118,7 @@
                     <div class="col-sm-6">
                         <div class="mt-3">
                             <label for="fLastN" class="form-label">Last Name:</label>
-                            <input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3"/>
+                            <input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" required/>
                             <div id="errorLastN" class="invalid-feedback">
                                 This field is required and must have, at least,
                                 3 characters
@@ -126,16 +126,16 @@
                         </div>
                         <div class="mt-3">
                             <label for="fPassword" class="form-label">Password:</label>
-                            <input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password"/>
+                            <input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password" required/>
                             <div id="errorPassword" class="invalid-feedback">
                                 Enter a correct password
                             </div>
                         </div>
                         <div class="mt-3">
                             <label for="fPhone" class="form-label">Phone Number:</label>
-                            <input id="fPhone" class="form-control" type="number" placeholder="Phone No."/>
+                            <input id="fPhone" class="form-control" type="number" minlength="9" placeholder="Phone Num." required/>
                             <div id="errorPhone" class="invalid-feedback">
-                                Invalid phone number!! Must be 9 digits with no
+                                Invalid phone number. Must be 9 digits with no
                                 letters
                             </div>
                         </div>
@@ -150,7 +150,7 @@
         </div>
 
         <!-- Footer-->
-        <footer class="py-3 bg-dark">
+        <footer class="py-3 bg-dark fixed-bottom">
             <div class="container">
                 <p class="m-0 text-center text-white">
                     Copyright &copy; Your Website 2022
