--- a/checkout.html
+++ b/checkout.html
@@ -128,12 +128,12 @@
                             <label for="fPassword" class="form-label">Password:</label>
                             <input id="fPassword" class="form-control" title="(4-8 characters)" type="password" minlength="4" maxlength="8" placeholder="Password" required/>
                             <div id="errorPassword" class="invalid-feedback">
-                                Enter a correct password
+                                Password must be between 4 and 8 characters long
                             </div>
                         </div>
                         <div class="mt-3">
                             <label for="fPhone" class="form-label">Phone Number:</label>
-                            <input id="fPhone" class="form-control" type="number" minlength="9" placeholder="Phone Num." required/>
+                            <input id="fPhone" class="form-control" type="text" minlength="9" maxlength="9" placeholder="Phone Num." required/>
                             <div id="errorPhone" class="invalid-feedback">
                                 Invalid phone number. Must be 9 digits with no
                                 letters
